org.mmisw.orrportal: MMI ORR Portal
Carlos Rueda  -  http://marinemetadata.org
$Id$

2012-09-02  2.0.32.beta
	- Fix 296: Direct load of mapping ontology does not load mapped ontologies when editing.
	  VineEditorPanel
	
2012-09-01  2.0.31.beta
	- Fix 297: error: "No data creation info provided! (please report this bug)"
	  See OntologyPanel.reviewAndRegister.

2012-08-27  2.0.30.beta
	- version sync with the other modules.
	- OntologySelection: now dispatches both the selection of a registered ontology
	  and the loading of an external ontology given its complete URL.
	  The previous mechanism based on MultiWordSuggestOracle and SuggestBox
	  is not used anymore. Instead, a TextBox and a ListBox are used with a
	  similar but more complete dispatch.
	  
	  TODO: include option to "Load local ontology" (use similar "upload" mechanism
	  as in the "Upload ontology" option.

2012-08-21  2.0.29.beta
	- Initial adjustments to facilitate mappings against external ontologies.
	- Minimize dealing directly with RegisteredOntologyInfo; instead deal 
	  with base class BaseOntologyInfo as much as possible.
	- In the concrete case of loading an external ontology, use the new 
	  service IOrrClient.getExternalOntologyInfo.
	
2012-08-18  2.0.28.beta
	- SearchGroup: All subjects in an ontology are now included for mapping purposes.
	  This was mainly done to enable possible mappings using the BODC vocabularies.
	  Duplicates within the same ontology are avoided using a Set<EntityInfo>. 

2012-08-18  2.0.27.beta
	- sync with orrclient module

2012-06-20  2.0.26.beta
	- Sort term table by the ID (localName) of the terms (#290). See OrrClient module.

2012-04-17  2.0.25.beta
	- GWT 2.4.0 tests, see gwt2/gwt2.txt

2012-04-03  2.0.24.beta
	- version sync with the other modules.

2012-04-02  2.0.23.beta
	- version sync with the other modules.

2012-03-22  2.0.22.beta
	- More adjustments related with use of new AllegroGraph 4.4